# tar-engine

./: .env.example  .gitignore  .mcp.json  Dockerfile  README.md  action.yml  docker-compose.yml  pyproject.toml  requirements.txt  server.json  setup-mcp.sh
.claude/hooks/: session-start.sh
backend/: app.py  event_store.py
backend/adapters/: __init__.py  base_adapter.py  cc_adapter.py  codex_adapter.py  event_schema.py
backend/auditor/: __init__.py  adversarial_fuzzer.py  audit_baseline.py  capabilities.py  decision_chain_auditor.py  domain_config.py  i18n.py  node_mapper.py  orchestrator.py  risk_gene_distiller.py  risk_guardrail.py  risk_scorer.py  semantic_auditor.py  signature_extractor.py  skill_registry.py  skill_rule_extractor.py
backend/auditor/domains/: __init__.py  general.py
backend/cockpit/: README.md  __init__.py  auditor_integration.py  dispatcher.py  llm_client.py  models.py  planner.py  profile_writer.py  router.py  skill_executor.py  store.py  telegram_bot.py  token_budget.py  trace_writer.py  wish_runner.py
backend/cockpit/prompts/: planner_few_shots.yaml  planner_system.txt
backend/cockpit/rag/: __init__.py  config.py  indexer.py  prompt_injector.py  retriever.py
backend/cockpit/rag/tests/: test_rag.py
backend/cockpit/tests/: test_auditor_integration.py  test_day1_skeleton.py  test_e2e.py  test_store.py  test_trace_writer.py  test_uxa_e2e.py
backend/knowledge/: __init__.py  l3_ingest.py  pii_filter.py
docs/: SKILL_AUDIT_DIMENSIONS.md
docs/examples/: example-skill-audit.yml
mcp-server/: README.md  tar_engine_cli.py  tar_engine_mcp.py  tar_engine_sarif.py  tar_engine_scanners.py
packs/hello-world/: README.md  pack.yaml  planner.md  profile_schema.yaml
packs/hello-world/skills/: echo.py  url_summarize.py
packs/hello-world/skills/echo/: SKILL.md
packs/hello-world/skills/url-summarize/: SKILL.md
packs/hello-world/skills/url-summarize/scripts/: fetch.py
packs/postall-content/: README.md  pack.yaml  planner.md  profile_schema.yaml
packs/postall-content/skills/generate-content/: SKILL.md
packs/postall-content/skills/generate-image/: SKILL.md
packs/postall-content/skills/list-drafts/: SKILL.md
packs/postall-content/skills/publish-content/: SKILL.md
scripts/audit-content/: README.md  audit_skill.py  batch_audit.py  batch_audit_v2.py  build_site.py  build_site_v2.py  skill_source.py
scripts/audit-content/config/: skills_to_audit.yaml  taxonomy.yaml
