[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tar-engine-mcp"
version = "0.1.1"
description = "MCP server for the TAR Engine — independent skill safety + quality audits for AI agents (claude code, cursor, codex)."
readme = "mcp-server/README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "TAR Engine"}]
keywords = ["mcp", "model-context-protocol", "ai", "skill", "audit", "security", "claude", "cursor", "codex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.scripts]
tar-engine-mcp = "tar_engine_mcp:main"

[project.urls]
Homepage = "https://tarai.dev"
Documentation = "https://tarai.dev/methodology/"
Repository = "https://github.com/qingxuantang/tar-engine"
"Bug Tracker" = "https://github.com/qingxuantang/tar-engine/issues"

[tool.setuptools]
package-dir = {"" = "mcp-server"}
py-modules = ["tar_engine_mcp"]
