[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tar-engine"
version = "0.3.2"
description = "Audit AI skill safety — CLI + MCP server for static, semantic, and adversarial skill audits across Claude Code, Cursor, Codex, and OpenCode."
readme = "mcp-server/README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "TAR Engine"}]
keywords = [
    "audit-ai-skill",
    "ai-skill-audit",
    "skill-audit",
    "ai-skill-safety",
    "ai-agent-safety",
    "mcp",
    "model-context-protocol",
    "claude-code",
    "claude-skill",
    "codex-skill",
    "opencode",
    "cursor",
    "skill-security",
    "ai-skill",
    "adversarial-fuzz",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.scripts]
tar-engine-mcp = "tar_engine_mcp:main"
tar-engine = "tar_engine_cli:main"

[project.urls]
Homepage = "https://tarai.dev"
Documentation = "https://tarai.dev/methodology/"
Repository = "https://github.com/qingxuantang/tar-engine"
"Bug Tracker" = "https://github.com/qingxuantang/tar-engine/issues"

[tool.setuptools]
package-dir = {"" = "mcp-server"}
py-modules = ["tar_engine_mcp", "tar_engine_cli", "tar_engine_scanners", "tar_engine_sarif"]
